// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getAvailableActionsForEvent() returns the correct actions for "DECLARED" status with a "declared:requested" flag 1`] = `
[
  "READ",
  "CUSTOM",
]
`;

exports[`getAvailableActionsForEvent() returns the correct actions for "REGISTERED" status with a "registered:requested" flag 1`] = `
[
  "READ",
  "CUSTOM",
]
`;

exports[`getAvailableActionsForEvent() should return the correct actions for "ARCHIVED" status with no flags 1`] = `
[
  "READ",
  "ASSIGN",
  "UNASSIGN",
  "CUSTOM",
]
`;

exports[`getAvailableActionsForEvent() should return the correct actions for "CREATED" status with no flags 1`] = `
[
  "READ",
  "DECLARE",
  "NOTIFY",
  "DELETE",
  "CUSTOM",
]
`;

exports[`getAvailableActionsForEvent() should return the correct actions for "DECLARED" status with no flags 1`] = `
[
  "READ",
  "REGISTER",
  "ARCHIVE",
  "REJECT",
  "CUSTOM",
  "EDIT",
]
`;

exports[`getAvailableActionsForEvent() should return the correct actions for "DECLARED" status with rejected flag 1`] = `
[
  "READ",
  "NOTIFY",
  "CUSTOM",
  "EDIT",
  "ARCHIVE",
]
`;

exports[`getAvailableActionsForEvent() should return the correct actions for "NOTIFIED" status with no flags 1`] = `
[
  "READ",
  "EDIT",
  "ARCHIVE",
  "REJECT",
  "CUSTOM",
]
`;

exports[`getAvailableActionsForEvent() should return the correct actions for "NOTIFIED" status with rejected flag 1`] = `
[
  "READ",
  "NOTIFY",
  "CUSTOM",
  "EDIT",
  "ARCHIVE",
]
`;

exports[`getAvailableActionsForEvent() should return the correct actions for "REGISTERED" status with "registered:requested" correction-requested flag 1`] = `
[
  "READ",
  "CUSTOM",
]
`;

exports[`getAvailableActionsForEvent() should return the correct actions for "REGISTERED" status with correction-requested flag 1`] = `
[
  "READ",
  "APPROVE_CORRECTION",
  "REJECT_CORRECTION",
  "CUSTOM",
  "REVIEW_CORRECTION_REQUEST",
]
`;

exports[`getAvailableActionsForEvent() should return the correct actions for "REGISTERED" status with no flags 1`] = `
[
  "READ",
  "PRINT_CERTIFICATE",
  "REQUEST_CORRECTION",
  "CUSTOM",
]
`;
